[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
rustls-pemfile = "2.2.0"
rustls = "0.23.35"
simplelog = "0.12.2"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "net", "time", "io-util"] }
tokio-rustls = "0.26.4"
log = "0.4.29"